crates/telemetry-f1/tests/snapshots/snapshot_tests__f1_2024_max_speed_drs_frame.snap
---
source: crates/telemetry-f1/tests/snapshot_tests.rs
expression: norm
---
speed_ms: 97.22222
steering_angle: 0
throttle: 1
brake: 0
clutch: 0
rpm: 14800
max_rpm: 15000
gear: 8
num_gears: 0
lateral_g: 0
longitudinal_g: 0
vertical_g: 0
slip_ratio: 0
slip_angle_fl: 0
slip_angle_fr: 0
slip_angle_rl: 0
slip_angle_rr: 0
tire_temps_c:
  - 105
  - 107
  - 110
  - 112
tire_pressures_psi:
  - 24
  - 24.3
  - 25
  - 25.3
ffb_scalar: 0
ffb_torque_nm: 0
flags:
  yellow_flag: false
  red_flag: false
  blue_flag: false
  checkered_flag: false
  green_flag: true
  pit_limiter: false
  in_pits: false
  drs_available: true
  drs_active: true
  ers_available: true
  ers_active: false
  launch_control: false
  traction_control: false
  abs_active: false
  engine_limiter: false
  safety_car: false
  formation_lap: false
  session_paused: false
track_id: Monza
position: 0
lap: 0
current_lap_time_s: 0
best_lap_time_s: 0
last_lap_time_s: 0
delta_ahead_s: 0
delta_behind_s: 0
fuel_percent: 0
engine_temp_c: 115
extended:
  air_temperature_c:
    type: Integer
    value: 35
  brake_temp_fl_c:
    type: Integer
    value: 530
  brake_temp_fr_c:
    type: Integer
    value: 540
  brake_temp_rl_c:
    type: Integer
    value: 550
  brake_temp_rr_c:
    type: Integer
    value: 560
  decoder_type:
    type: String
    value: f1_native_udp
  drs_active:
    type: Boolean
    value: true
  drs_available:
    type: Boolean
    value: true
  engine_power_ice_w:
    type: Float
    value: 580000
  engine_power_mguk_w:
    type: Float
    value: 120000
  ers_deploy_mode:
    type: Integer
    value: 3
  ers_deployed_j:
    type: Float
    value: 3500000
  ers_harvested_mguh_j:
    type: Float
    value: 600000
  ers_harvested_mguk_j:
    type: Float
    value: 800000
  ers_store_energy_j:
    type: Float
    value: 200000
  ers_store_fraction:
    type: Float
    value: 0.05
  fuel_remaining_kg:
    type: Float
    value: 5
  fuel_remaining_laps:
    type: Float
    value: 1.5
  rpm_fraction:
    type: Float
    value: 0.9866667
  session_type:
    type: Integer
    value: 10
  track_temperature_c:
    type: Integer
    value: 45
  tyre_age_laps:
    type: Integer
    value: 35
  tyre_compound:
    type: Integer
    value: 14
  tyre_compound_name:
    type: String
    value: Hard
  tyre_inner_temp_fl_c:
    type: Integer
    value: 115
  tyre_inner_temp_fr_c:
    type: Integer
    value: 117
  tyre_inner_temp_rl_c:
    type: Integer
    value: 120
  tyre_inner_temp_rr_c:
    type: Integer
    value: 122
sequence: 0
