crates/telemetry-f1/tests/snapshots/snapshot_tests__f1_2024_pit_entry_frame.snap
---
source: crates/telemetry-f1/tests/snapshot_tests.rs
expression: norm
---
speed_ms: 22.222223
steering_angle: 0.02
throttle: 0.3
brake: 0
clutch: 0
rpm: 6500
max_rpm: 13500
gear: 3
num_gears: 0
lateral_g: 0
longitudinal_g: 0
vertical_g: 0
slip_ratio: 0
slip_angle_fl: 0
slip_angle_fr: 0
slip_angle_rl: 0
slip_angle_rr: 0
tire_temps_c:
  - 78
  - 79
  - 82
  - 83
tire_pressures_psi:
  - 21.5
  - 21.8
  - 22.5
  - 22.8
ffb_scalar: 0
ffb_torque_nm: 0
flags:
  yellow_flag: false
  red_flag: false
  blue_flag: false
  checkered_flag: false
  green_flag: true
  pit_limiter: true
  in_pits: true
  drs_available: false
  drs_active: false
  ers_available: true
  ers_active: false
  launch_control: false
  traction_control: false
  abs_active: false
  engine_limiter: false
  safety_car: false
  formation_lap: false
  session_paused: false
track_id: Monza
position: 0
lap: 0
current_lap_time_s: 0
best_lap_time_s: 0
last_lap_time_s: 0
delta_ahead_s: 0
delta_behind_s: 0
fuel_percent: 0
engine_temp_c: 102
extended:
  air_temperature_c:
    type: Integer
    value: 24
  brake_temp_fl_c:
    type: Integer
    value: 260
  brake_temp_fr_c:
    type: Integer
    value: 270
  brake_temp_rl_c:
    type: Integer
    value: 280
  brake_temp_rr_c:
    type: Integer
    value: 290
  decoder_type:
    type: String
    value: f1_native_udp
  drs_active:
    type: Boolean
    value: false
  drs_available:
    type: Boolean
    value: false
  engine_power_ice_w:
    type: Float
    value: 0
  engine_power_mguk_w:
    type: Float
    value: 0
  ers_deploy_mode:
    type: Integer
    value: 0
  ers_deployed_j:
    type: Float
    value: 0
  ers_harvested_mguh_j:
    type: Float
    value: 0
  ers_harvested_mguk_j:
    type: Float
    value: 0
  ers_store_energy_j:
    type: Float
    value: 500000
  ers_store_fraction:
    type: Float
    value: 0.125
  fuel_remaining_kg:
    type: Float
    value: 15
  fuel_remaining_laps:
    type: Float
    value: 4.2
  rpm_fraction:
    type: Float
    value: 0.4814815
  session_type:
    type: Integer
    value: 10
  track_temperature_c:
    type: Integer
    value: 30
  tyre_age_laps:
    type: Integer
    value: 22
  tyre_compound:
    type: Integer
    value: 18
  tyre_compound_name:
    type: String
    value: C3
  tyre_inner_temp_fl_c:
    type: Integer
    value: 88
  tyre_inner_temp_fr_c:
    type: Integer
    value: 89
  tyre_inner_temp_rl_c:
    type: Integer
    value: 92
  tyre_inner_temp_rr_c:
    type: Integer
    value: 93
sequence: 0
